--- a/.env
+++ b/.env
@@ -1,2 +1,8 @@
 GOOGLE_ID = 459121229879-f87oi6372dedqodcfl8mkga2e6ad8n3d.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET = 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
+MONGODB_URI = mongodb+srv://obichris202:ugjszZ6ddQM5efrQ@cluster0.yydxhew.mongodb.net/?retryWrites=true&w=majority
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_SECRET = a8W8ZZvBzN1WIbsJasxRbUzSFPqfJSkRa7Tw+rxtJWM=
+GITHUB_ID = 3647a0611735e8ccbf1f
+GITHUB_CLIENT_SECRET = d91279e4334744548776a128ea154edd0e1cf33a
